[수정] 달력 라이브러리 수정중

--- a/src/main/resources/templates/plan/calendar.html
+++ b/src/main/resources/templates/plan/calendar.html
@@ -335,7 +335,6 @@
                     format: 'yyyy-mm-dd',
                     todayHighlight: true,
                     autoclose: true,
-                    startDate: '0d',
                     language: "ko"
                 }).on('changeDate', function(e) {
                     checkDate();
@@ -348,6 +347,10 @@
 
                     if (!startDate || !endDate) {
                         return; // 하나라도 선택되지 않은 경우 함수 종료
+                    }
+
+                    if (startDate > endDate) {
+                        endDatePicker.datepicker('setDate', startDate); // endDate를 startDate로 설정
                     }
 
                     var diff = endDate - startDate;
