--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -59,7 +59,11 @@
     }
 
     .fontSizeBtn {
-        font-size: x-small;
+        font-size: small;
+        padding-left: 8px;
+        padding-right: 8px;
+        padding-top: 8px;
+        padding-bottom: 8px;
         height: 40px;
     }
 
