가입시 이메일 인증번호 관련

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -269,3 +269,10 @@ a {
 .btn_align {
     text-align: center;
 }
+
+.headerLogo{
+    font-size: xx-large;
+    text-align: center;
+    font-weight: bolder;
+    padding-top: 2em;
+}
