--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -27,6 +27,7 @@
 
     .container {
         padding-left: 0;
+        margin: 0 auto;
     }
 
     .body-form {
@@ -47,7 +48,7 @@
     }
 
     .joindiv {
-        margin-top: 2em;
+        margin-top: 4em;
         padding-left: 5em;
         padding-right: 5em;
         padding-top: 3em;
@@ -56,6 +57,7 @@
         background-color: #ffffff;
         background-color: rgba(255, 255, 255, 0.9);
         width: 50%;
+        height: fit-content;
     }
 
     .fontSizeBtn {
@@ -74,8 +76,6 @@
 
     .numberBtn {
         width: 300px;
-        /*text-align: center;*/
-        /*margin: 0 auto; !* 요소를 수평으로 가운데 정렬합니다. *!*/
     }
 
     .btn-square {
@@ -84,114 +84,114 @@
 </style>
 <body class="body-form">
 
-<div class="d-flex flex-nowrap">
-    <!--    <th:block th:replace="~{fragments/sidebar}"></th:block>-->
+<!--<div class="d-flex flex-nowrap">-->
+<div class="headerLogo"><a href="/review">둘레둘레</a></div>
 
-    <div class="w3-content w3-container w3-margin-top container position-relative pb-5 " style="margin: 0 auto;">
+<div class="w3-content w3-container w3-margin-top container position-relative pb-5 ">
 
-        <div id="wrap" class="container position-relative pb-5 joindiv ">
-            <form th:action="@{/api/users/register}" th:method="post" onsubmit="return false" name="joinForm"
-                  enctype="application/json">
+    <div id="wrap" class="container position-relative pb-5 joindiv ">
+        <form th:action="@{/api/users/register}" th:method="post" onsubmit="return false" name="joinForm"
+              enctype="application/json">
 
-                <!-- 회원가입 타이틀부분 -->
-                <div id="header">
-                    <h1 class="text-center">
-                        <!--<span><img alt="프로젝트 메인 제목" src="#"></span>-->
-                        회원가입 정보 입력
-                    </h1>
-                    <p class="text-center">회원가입에 필요한 정보를 기입해주세요.</p>
-                </div>
+            <!-- 회원가입 타이틀부분 -->
+            <div id="header">
+                <h1 class="text-center">
+                    <!--<span><img alt="프로젝트 메인 제목" src="#"></span>-->
+                    회원가입 정보 입력
+                </h1>
+                <p class="text-center">회원가입에 필요한 정보를 기입해주세요.</p>
+            </div>
 
-                <div id="container">
-                    <div class="row_group">
-                        <div class="userInput mb-5">
-                            <h4 class="list">아이디</h4>
-                            <div class="input-group">
-                                <!-- 아이디 입력 -->
-                                <input type="text" name="id" class="form-control form-control-sm" maxlength="20"
-                                       placeholder="아이디를 입력하세요."/>
-                                <!--아이디 중복확인-->
-                                <input type="button" value="중복 확인" class="btn btn-primary btn-sm" id="idCheckBtn">
-                                <!--                        중복확인?-->
-                                <div id="idAvailable" class="valid-feedback" style="display: none;"></div>
-                                <div id="idNotAvailable" class="invalid-feedback" style="display: none;"></div>
+            <div id="container">
+                <div class="row_group">
+                    <div class="userInput mb-5">
+                        <h4 class="list">아이디</h4>
+                        <div class="input-group">
+                            <!-- 아이디 입력 -->
+                            <input type="text" name="id" class="form-control form-control-sm" maxlength="20"
+                                   placeholder="아이디를 입력하세요."/>
+                            <!--아이디 중복확인-->
+                            <input type="button" value="중복 확인" class="btn btn-primary btn-sm" id="idCheckBtn">
+                            <!--                        중복확인?-->
+                            <div id="idAvailable" class="valid-feedback" style="display: none;"></div>
+                            <div id="idNotAvailable" class="invalid-feedback" style="display: none;"></div>
+                        </div>
+                    </div>
+
+                    <div class="userInput mb-5">
+                        <!-- 비밀번호 입력 -->
+                        <div class="pw_box">
+                            <h4 class="list">비밀번호</h4>
+                            <div class="pw_info">※알파벳 대문자, 소문자, 숫자와 특수문자[!@#$%^*+=-]를<br> 모두 포함하는 8~15자리로 작성하여 주십시오.
                             </div>
                         </div>
+                        <input type="password" name="pw" id="pw" class="form-control form-control-sm" maxlength="20"
+                               placeholder="비밀번호를 입력하세요.">
+                    </div>
 
-                        <div class="userInput mb-5">
-                            <!-- 비밀번호 입력 -->
-                            <div class="pw_box">
-                                <h4 class="list">비밀번호</h4>
-                                <div class="pw_info">※알파벳 대문자, 소문자, 숫자와 특수문자[!@#$%^*+=-]를<br> 모두 포함하는 8~15자리로 작성하여 주십시오.
-                                </div>
-                            </div>
-                            <input type="password" name="pw" id="pw" class="form-control form-control-sm" maxlength="20"
-                                   placeholder="비밀번호를 입력하세요.">
+                    <!-- 비밀번호 재확인 입력 -->
+                    <div class="userInput mb-5">
+                        <h4 class="list">비밀번호 재확인</h4>
+                        <input type="password" name="pwconfirm" id="pwconfirm" class="form-control form-control-sm"
+                               maxlength="20" placeholder="입력한 비밀번호를 확인해주세요.">
+                    </div>
+
+                    <!-- 성명 입력 -->
+                    <div class="userInput mb-5">
+                        <h4 class="list">성명</h4>
+                        <input type="text" name="name" id="name" class="form-control form-control-sm" maxlength="20"
+                               placeholder="이름을 입력해주세요.">
+                    </div>
+
+                    <!-- 이메일 입력 -->
+                    <div class="userInput mb-5">
+                        <h4 class="list">이메일</h4>
+                        <div class="input-group">
+                            <!--                                새로운 이메일 인증-->
+                            <input type="email" name="email" id="email" class="form-control form-control-sm"
+                                   placeholder="이메일을 입력해주세요.">
+
+                            <button type="button" class="btn-join btn btn-primary btn-md fontSizeBtn" id="sendBtn"
+                                    name="sendBtn" onclick="sendNumber()">인증번호전송
+                            </button>
+
+                            <div id="emaildupliAvailable" class="valid-feedback" style="display: none;"></div>
+                            <div id="emaildupliNotAvailable" class="invalid-feedback" style="display: none;"></div>
+                            <div id="joinAvailable" class="valid-feedback" style="display: none;"></div>
+
                         </div>
-
-                        <!-- 비밀번호 재확인 입력 -->
-                        <div class="userInput mb-5">
-                            <h4 class="list">비밀번호 재확인</h4>
-                            <input type="password" name="pwconfirm" id="pwconfirm" class="form-control form-control-sm"
-                                   maxlength="20" placeholder="입력한 비밀번호를 확인해주세요.">
-                        </div>
-
-                        <!-- 성명 입력 -->
-                        <div class="userInput mb-5">
-                            <h4 class="list">성명</h4>
-                            <input type="text" name="name" id="name" class="form-control form-control-sm" maxlength="20"
-                                   placeholder="이름을 입력해주세요.">
-                        </div>
-
-                        <!-- 이메일 입력 -->
-                        <div class="userInput mb-5">
-                            <h4 class="list">이메일</h4>
-                            <div class="input-group">
-                                <!--                                새로운 이메일 인증-->
-                                <input type="email" name="email" id="email" class="form-control form-control-sm"
-                                       placeholder="이메일을 입력해주세요.">
-
-                                <button type="button" class="btn-join btn btn-primary btn-md fontSizeBtn" id="sendBtn"
-                                        name="sendBtn" onclick="sendNumber()">인증번호전송
+                        <br>
+                        <div id="mail_number" name="mail_number" style="display: none">
+                            <div class="input-group numberBtn">
+                                <input type="text" name="number" id="number" class="form-control form-control-sm "
+                                       placeholder="인증번호 입력">
+                                <button type="button" class="btn-join btn btn-primary btn-md fontSizeBtn btn-square"
+                                        name="confirmBtn" id="confirmBtn" onclick="confirmNumber()">이메일 인증
                                 </button>
-
-                                <div id="emaildupliAvailable" class="valid-feedback" style="display: none;"></div>
-                                <div id="emaildupliNotAvailable" class="invalid-feedback" style="display: none;"></div>
-                                <div id="joinAvailable" class="valid-feedback" style="display: none;"></div>
-
                             </div>
-                            <br>
-                            <div id="mail_number" name="mail_number" style="display: none">
-                                <div class="input-group numberBtn">
-                                    <input type="text" name="number" id="number" class="form-control form-control-sm "
-                                           placeholder="인증번호 입력">
-                                    <button type="button" class="btn-join btn btn-primary btn-md fontSizeBtn btn-square"
-                                            name="confirmBtn" id="confirmBtn" onclick="confirmNumber()">이메일 인증
-                                    </button>
-                                </div>
-                                <!-- 타이머 표시할 요소 -->
-                                <div id="timer"></div>
+                            <!-- 타이머 표시할 요소 -->
+                            <div id="timer"></div>
 
-                                <div id="emailAvailable" class="valid-feedback" style="display: none;"></div>
-                                <div id="emailNotAvailable" class="invalid-feedback" style="display: none;"></div>
-
-                            </div>
+                            <div id="emailAvailable" class="valid-feedback" style="display: none;"></div>
+                            <div id="emailNotAvailable" class="invalid-feedback" style="display: none;"></div>
 
                         </div>
-
 
                     </div>
-                </div>
-            </form>
-            <!-- 버튼-->
-            <div class="col text-center mb-5">
-                <button type="button" value="취소" id="cancelBtn" class="btn btn-primary2 btn-md"
-                        onClick="location.href='/review'">취소
-                </button>
 
-                <input type="submit" value="가입" id="joinBtn" class="btn-join btn btn-primary btn-md">
+
+                </div>
             </div>
+        </form>
+        <!-- 버튼-->
+        <div class="col text-center mb-5">
+            <button type="button" value="취소" id="cancelBtn" class="btn btn-primary2 btn-md"
+                    onClick="location.href='/review'">취소
+            </button>
+
+            <input type="submit" value="가입" id="joinBtn" class="btn-join btn btn-primary btn-md">
         </div>
+        <!--        </div>-->
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -495,6 +495,8 @@
             }
 
         </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
     </div>
