--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -80,26 +80,29 @@
     }
 
     .login-form {
-        margin-top: 10em;
+        margin-top: 4em;
         padding: 5em;
         border-radius: 30px;
         background-color: #ffffff;
         background-color: rgba(255, 255, 255, 0.9);
         width: 50%;
     }
+
+
 </style>
 
     <div class="w3-content w3-container w3-margin-top container position-relative pb-5">
+        <!-- 오류 확인 메세지 위에 뜸 -->
+        <div th:if="${param.error}">
+            <div class="alert alert-danger">
+                사용자ID 또는 비밀번호를 확인해 주세요.
+            </div>
+        </div>
 
+        <div class="headerLogo"><a href="/review">둘레둘레</a></div>
 
         <form action="/loginProcess" method="POST" name="loginFrm" onsubmit="return validateForm(this)">
-            <!-- 오류 확인 -->
-            <div th:if="${param.error}">
-                <div class="alert alert-danger">
-                    사용자ID 또는 비밀번호를 확인해 주세요.
 
-                </div>
-            </div>
 
 
             <div class="login-form w3-content w3-container w3-margin-top container-fluid position-relative mb-4">
@@ -136,9 +139,6 @@
         </form>
 
 
-        <!--footer-->
-<!--        <th:block th:replace="~{fragments/footer}"></th:block>-->
-        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     </div>
